datepicker fixed. single graphs in 2 columns

--- a/src/app/modules/clinician-manager/cards/patient-range-picker.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-range-picker.component.html
@@ -25,49 +25,49 @@
       <div class="rowcontent">
         <button type="button"
                 class="btn btn-default {{range.range==='lastweek'   ? 'btn-outline-success' : ''}}"
-                (click)="rangeChanged('lastweek')"
+                (click)="rangeChange('lastweek')"
                 i18n="Last week">
           Last week
         </button>
 
         <button type="button"
                 class="btn btn-default {{range.range==='lastmonth'   ? 'btn-outline-success' : ''}}"
-                (click)="rangeChanged('lastmonth')"
+                (click)="rangeChange('lastmonth')"
                 i18n="Last month">
           Last month
         </button>
 
         <button type="button"
                 class="btn btn-default {{range.range==='last2months'   ? 'btn-outline-success' : ''}}"
-                (click)="rangeChanged('last2months')"
+                (click)="rangeChange('last2months')"
                 i18n="Last 2 months">
           Last 2 months
         </button>
 
         <button type="button"
                 class="btn btn-default {{range.range==='last6months'   ? 'btn-outline-success' : ''}}"
-                (click)="rangeChanged('last6months')"
+                (click)="rangeChange('last6months')"
                 i18n="Last 6 months">
           Last 6 months
         </button>
 
         <button type="button"
                 class="btn btn-default {{range.range==='next6months'   ? 'btn-outline-success' : ''}}"
-                (click)="rangeChanged('next6months')"
+                (click)="rangeChange('next6months')"
                 i18n="Next 6 months">
           Next 6 months
         </button>
 
         <button type="button"
                 class="btn btn-default {{range.range==='lastyear'   ? 'btn-outline-success' : ''}}"
-                (click)="rangeChanged('lastyear')"
+                (click)="rangeChange('lastyear')"
                 i18n="Last year">
           Last year
         </button>
 
         <button type="button"
                 class="btn btn-default {{range.range==='last2years'   ? 'btn-outline-success' : ''}}"
-                (click)="rangeChanged('last2years')"
+                (click)="rangeChange('last2years')"
                 i18n="Last 2 years">
           Last 2 years
         </button>
