--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -2,53 +2,53 @@
 
   <div class=" w3-center">
     <button class="btn btn-default {{cardToShow==='all'   ? 'btn-outline-success' : ''}}"
-            [routerLink]="['/clinician-manager', 'all', 'all', range.range]" (click)="focusRange(range.range)"> all
+            [routerLink]="['/clinician-manager', 'all', 'all', range.range]"> all
     </button>
     |
     <button class="btn btn-default {{cardToShow==='overview'   ? 'btn-outline-success' : ''}}"
-            (click)="focusRange(range.range)"
+
             [routerLink]="['/clinician-manager', 'overview', '', range.range]"> overview
     </button>
     |
     <button class="btn btn-default {{cardToShow==='comments'   ? 'btn-outline-success' : ''}}"
-            (click)="focusRange(range.range)"
+
             [routerLink]="['/clinician-manager', 'comments', '', range.range]">comments
     </button>
     |
     <button class="btn btn-default {{cardToShow==='followups'   ? 'btn-outline-success' : ''}}"
-            (click)="focusRange(range.range)" [routerLink]="['/clinician-manager', 'followups', '', range.range]">
+            [routerLink]="['/clinician-manager', 'followups', '', range.range]">
       followups
     </button>
     |
     <button class="btn btn-default {{cardToShow==='treatments'   ? 'btn-outline-success' : ''}}"
-            (click)="focusRange(range.range)" [routerLink]="['/clinician-manager', 'treatments', '', range.range]">
+            [routerLink]="['/clinician-manager', 'treatments', '', range.range]">
       treatments
     </button>
     |
     <button class="btn btn-default {{cardToShow==='medications'   ? 'btn-outline-success' : ''}}"
-            (click)="focusRange(range.range)" [routerLink]="['/clinician-manager', 'medications', '', range.range]">
+            [routerLink]="['/clinician-manager', 'medications', '', range.range]">
       medications
     </button>
     |
     <button
       class="btn btn-default {{cardToShow==='observations' ? 'btn-outline-success' : ''}}"
-      (click)="focusRange(range.range)" [routerLink]="['/clinician-manager', 'observations', 'all', range.range]">
+      [routerLink]="['/clinician-manager', 'observations', 'all', range.range]">
       measurements
     </button>
     |
 
     <button class="btn btn-default {{cardToShow==='morisky'   ? 'btn-outline-success' : ''}}"
-            (click)="focusRange(range.range)"
+
             [routerLink]="['/clinician-manager', 'morisky', '', range.range]">morisky
     </button>
     |
     <button class="btn btn-default {{cardToShow==='diseases'   ? 'btn-outline-success' : ''}}"
-            (click)="focusRange(range.range)"
+
             [routerLink]="['/clinician-manager', 'diseases', '', range.range]">diseases
     </button>
     |
     <button class="btn btn-default {{cardToShow==='clinicians'   ? 'btn-outline-success' : ''}}"
-            (click)="focusRange(range.range)" [routerLink]="['/clinician-manager', 'clinicians', '', range.range]">
+            [routerLink]="['/clinician-manager', 'clinicians', '', range.range]">
       clinicians
     </button>
 
@@ -159,11 +159,11 @@
   <div *ngIf="cardToShow==='observations' || cardToShow === 'all'" class=" w3-center">
 
     <button class="btn btn-default {{!showSeparate ? 'btn-outline-success' : ''}}"
-            (click)="showSeparate=false;focus('lastyear')">Combined Graph
+            (click)="showSeparate=false;">Combined Graph
     </button>
 
     <button class="btn btn-default {{showSeparate  ? 'btn-outline-success' : ''}}"
-            (click)="showSeparate=true;focus('lastyear')">Separate Graphs
+            (click)="showSeparate=true;">Separate Graphs
     </button>
 
   </div>
@@ -179,56 +179,99 @@
 
   <div *ngIf="showSeparate && (cardToShow==='observations' || cardToShow === 'all')" class="row">
 
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]="'heartrate'" [dateRange]="range">
+      </patient-daily-average-observations>
+    </div>
 
-    <patient-daily-average-observations [forMeasurements]="'heartrate'" [dateRange]="range">
-    </patient-daily-average-observations>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]="'sys'" [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]="'sys'" [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"dia"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"dia"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"weight"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"weight"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"steps"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"steps"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"distance"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"distance"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"sleep"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"sleep"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"pain"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"pain"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"wellbeing"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"wellbeing"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"radai"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"radai"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"ffbh"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"ffbh"' [dateRange]="range">
-    </patient-daily-average-observations>
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"haq"' [dateRange]="range">
+      </patient-daily-average-observations>
 
-    <patient-daily-average-observations [forMeasurements]='"haq"' [dateRange]="range">
-    </patient-daily-average-observations>
-
-    <patient-daily-average-observations [forMeasurements]='"eq5d"' [dateRange]="range">
-    </patient-daily-average-observations>
-
-  </div>
-
-  <div *ngIf="cardToShow === 'all'"
-       class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-
-
+    </div>
+    <div
+      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
+      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      <patient-daily-average-observations [forMeasurements]='"eq5d"' [dateRange]="range">
+      </patient-daily-average-observations>
 
     </div>
   </div>
+
 
   <div *ngIf="cardToShow==='morisky' || cardToShow === 'all'" class="row">
 
