loading spinners added. medication and teratment detail view added

--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -1,12 +1,20 @@
 <div class="card">
   <div *ngIf="headerText" class="card-header w3-blue  w3-center">
 
-    <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i> {{headerText}}</div>
-    <div class="w3-right">
+    <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i> {{headerText}}
 
-      <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
-      <div *ngIf="(progress.percentage < 100)"> loaded: {{progress.total}} bytes</div>
+      <span class="w3-right">
+
+      <span *ngIf="(progress.percentage < 100)">
+
+        <span class="fa fa-spinner w3-spin" style="font-size:20px"></span>
+
+        loading: {{progress.percentage}}% |
+      loaded: {{progress.total}} bytes</span>
+    </span>
+
     </div>
+
   </div>
   <div *ngIf="observationGroups" class="card-block" style="overflow-x: auto;">
 
