--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -1,51 +1,62 @@
 <div class="card w3-light-gray">
 
   <div class="card-header w3-blue">
+
     <div class="w3-center" i18n="Patient's Treatment History">
       <i class="fa fa-hospital-o"></i>
       Patient's Treatment History
+      <span class="w3-right">
+
+      <span *ngIf="(progress.percentage < 100)">
+
+        <span class="fa fa-spinner w3-spin" style="font-size:20px"></span>
+
+        loading: {{progress.percentage}}% |
+      loaded: {{progress.total}} bytes
+      </span>
+    </span>
+
     </div>
-    <div *ngIf="(progress.percentage < 100)" class="w3-right">
-      <div> loading: {{progress.percentage}}%</div>
-      <div> loaded: {{progress.total}} bytes</div>
-    </div>
+
   </div>
 
   <div class="card-block">
-    <div [visTimeline]="visTimelineTreatments"
-         [visTimelineItems]="visTimelineItemsTreatments"
-         [visTimelineOptions]="visTimelineTreatmentsOptions"
-         (initialized)="timelineInitialized()">
+
+    <div class="col-xs-12 col-sm-12 col-md-{{selectedTreatment?'6':12}}
+    col-lg-{{selectedTreatment?'6':12}} col-xl-{{selectedTreatment?'8':12}}">
+      <div [visTimeline]="visTimelineTreatments"
+           [visTimelineItems]="visTimelineItemsTreatments"
+           [visTimelineOptions]="visTimelineTreatmentsOptions"
+           (initialized)="timelineInitialized()">
+      </div>
     </div>
+
+    <div *ngIf="selectedTreatment"
+         class="{{animateToggle?'w3-animate-bottom':'w3-animate-right'}}  col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
+
+      <div class="card-header">
+        <div>Patient's Treatment details
+          <button class="btn btn-default  w3-right" (click)="close()">X</button>
+        </div>
+      </div>
+      <div>
+
+
+        <div>Category: {{selectedTreatment.category}}</div>
+        <div>Visit reason: {{selectedTreatment.visitReason}}</div>
+        <div>Visit results: {{selectedTreatment.visitResults}}</div>
+        <div>From: {{selectedTreatment.startDate}}</div>
+        <div>To: {{selectedTreatment.endDate}}</div>
+      </div>
+
+
+    </div>
+
   </div>
 
   <div class="card-footer">
-    <div class="w3-tiny w3-right">Click chosen treatment to view it's detail in a pop up
-      window.
+    <div class="w3-tiny w3-right">Click chosen treatment to view it's details.
     </div>
-  </div>
 
+  </div>
 </div>
-
-<modal [animation]="animationsEnabled" #myCheckModal>
-  <div *ngIf="selectedTreatment">
-    <modal-header [show-close]="true">
-      <h4 class="modal-title ">Patient's Treatment details</h4>
-    </modal-header>
-    <modal-body>
-
-      <div class="w3-container w3-border w3-border-lime w3-round-large">
-
-
-        <p>Category: {{selectedTreatment.category}}</p>
-        <p>Visit reason: {{selectedTreatment.visitReason}}</p>
-        <p>Visit results: {{selectedTreatment.visitResults}}</p>
-        <p>From: {{selectedTreatment.startDate}}</p>
-        <p>To: {{selectedTreatment.endDate}}</p>
-      </div>
-
-    </modal-body>
-    <modal-footer [show-default-buttons]="false"></modal-footer>
-
-  </div>
-</modal>
