--- a/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
@@ -1,11 +1,18 @@
 <div class="card">
   <div class="card-header w3-orange w3-center">
-    <div i18n="Concluding Comments "><i class="fa fa-medkit"></i> Concluding Comments</div>
-    <div class="w3-right">
+    <div i18n="Concluding Comments "><i class="fa fa-medkit"></i> Concluding Comments
+      <span class="w3-right">
 
-      <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
-      <div *ngIf="(progress.percentage < 100)"> loaded: {{progress.total}} bytes</div>
+      <span *ngIf="(progress.percentage < 100)">
+
+        <span class="fa fa-spinner w3-spin" style="font-size:20px"></span>
+
+        loading: {{progress.percentage}}% |
+      loaded: {{progress.total}} bytes</span>
+    </span>
+
     </div>
+
   </div>
   <div class="card-block" style="overflow-x: auto;">
     <!--
