--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -1,8 +1,10 @@
 <div class="card">
-  <div *ngIf="headerText" class="card-header w3-blue  w3-center">
+  <div *ngIf="headerText || (progress.percentage < 100)" class="card-header w3-blue  w3-center">
 
-    <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i> {{headerText}}
+    <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i>
 
+      <span *ngIf="headerText">{{headerText}}
+      </span>
       <span class="w3-right">
 
       <span *ngIf="(progress.percentage < 100)">
