remote service used for some graphs (observation, patient, clinicians) local ODS JSON structure updated. medication intakes added.

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -54,12 +54,11 @@
         <a class="nav-link" [routerLink]="['/patient-id']"><i class="fa fa-search" aria-hidden="true"></i>Select Patient</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/clinician-manager/all/all/lastyear']"><i class="icon-speedometer"></i>Patient
-          data
-          viewer</a>
+        <a class="nav-link" [routerLink]="['/clinician-manager/all/all/lastyear']"><i class="icon-speedometer"></i>
+          Patient data</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Care setting</a>
+        <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Patient map</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i>Care plan manager</a>
