--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="patientData">
+<div class="card">
   <div class="card-header w3-light-blue  w3-center">
 
 
@@ -119,11 +119,9 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="Address">
                     Patient Address:
                   </span>
-              {{patientData.address1}}
+              {{patientData.address}}
             </div>
-            <div class=" text-primary ">{{patientData.address2}}</div>
-            <div class=" text-primary ">{{patientData.address3}}</div>
-            <div class=" text-primary ">{{patientData.address4}}</div>
+
 
           </div>
         </div>
