ODS data model updated.

--- a/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
@@ -87,10 +87,10 @@
       <tr *ngFor="let comments of mf.data">
 
         <td>{{comments.date}}</td>
-        <td>{{comments.author}}</td>
+        <td>{{comments.authorName}}</td>
         <td>{{comments.addresseeName}}</td>
         <td>{{comments.addresseeRole}}</td>
-        <td>{{comments.comments}}</td>
+        <td>{{comments.comment}}</td>
 
       </tr>
 
