--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -3,11 +3,16 @@
 
 
     <span i18n="PatientData Info"><i class="fa fa-user"></i>
-      Patient -
+      Patient
+
+      <!--
+      -
 
       <select [ngModel]="selectedPatient" (ngModelChange)="patientClicked($event)">
         <option *ngFor="let patient of patientsList" [value]="patient">{{patient}}</option>
       </select>
+
+      -->
 
     </span>
 
