--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -29,7 +29,7 @@
 
 
   </div>
-  <div class="card-block">
+  <div *ngIf="patientData" class="card-block">
     <div class="animated fadeIn">
       <div class="row">
         <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
