--- a/src/app/modules/clinician-manager/cards/patient-range-picker.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-range-picker.component.css
@@ -16,6 +16,7 @@
 
 .card-block {
   padding: 0.25rem;
+  margin-bottom: -20px;
 }
 
 .card-header {
@@ -45,6 +46,10 @@
   padding: 0.25rem;
 }
 
+div.mydrp {
+  top: 10px;
+}
+
 pagination {
   padding: 0;
   margin: 0;
@@ -55,6 +60,7 @@ button {
   background-color: #eee;
   padding: 0.25rem 0.25rem;
   border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 button:hover {
