navigation to different subviews moved to the left menu. left right axis switches simplified

--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.css
@@ -43,3 +43,19 @@ td {
   margin-right: 15px;
   text-align: center;
 }
+
+button {
+
+  padding: 0.25rem 0.25rem;
+  border-radius: 10px;
+}
+
+button:hover {
+  background-color: #cfd8dc;
+}
+
+button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
