--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -1,10 +1,11 @@
 <div class="card">
   <div *ngIf="headerText || (progress.percentage < 100)" class="card-header w3-blue  w3-center">
 
-    <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i>
+    <div><i class="fa fa-heartbeat"></i>
 
       <span *ngIf="headerText">{{headerText}}
       </span>
+
       <span class="w3-right">
 
       <span *ngIf="(progress.percentage < 100)">
@@ -23,51 +24,83 @@
     <div class="row">
       <div class="w3-center">
 
-        <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
-                class="btn btn-default"
-                (click)="clearAll()">
-          <span>  <i class="fa fa-circle-o"></i> </span>
-          Clear graph
-          <span>
-          </span>
-        </button>
+        <div>
+          <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
+                  class="btn btn-default"
+                  (click)="clearAll()">
+            <i class="fa fa-circle-o"></i>
+            Clear all
 
-        <button type="button"
-                class="btn btn-default"
-                (click)="resetMinMidMax()">
-          <span>  <i class="fa {{showMinMidMax?'fa-circle':'fa-circle-o'}}"></i> </span>
-          min/mid/max lines
-          <span>
-          </span>
-        </button>
+          </button>
 
-        <span *ngIf="observationGroups && observationGroups.length!==1">
-        <span *ngFor="let group of observationGroups">
+
+          <button type="button"
+                  class="btn btn-default"
+                  (click)="resetMinMidMax()">
+            <span>  <i class="fa {{showMinMidMax?'fa-circle':'fa-circle-o'}}"></i> </span>
+            min/mid/max lines
+            <span>
+          </span>
+          </button>
+        </div>
+
+
+        <div *ngIf="observationGroups && observationGroups.length!==1"
+             class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
+                  class="btn btn-default"
+                  (click)="showAllLeft()">
+
+            <i class="fa fa-circle"></i> Show all on left axis
+          </button>
+
+          <span *ngFor="let group of observationGroups">
 
           <span style="white-space: nowrap">
 
             <button type="button" class="btn btn-default"
-                    (click)="toggleLeft(group.id, group.name)"> {{group.name}} <span *ngIf="group.source"> ({{group.source}})</span>
-
+                    (click)="toggleLeft(group.id, group.name)">
               <span [style.color]="group.color">
-                                <i class="fa {{group.showLeft?'fa-circle':'fa-circle-o'}}"></i>
-                            </span>
+                <i class="fa {{group.showLeft?'fa-circle':'fa-circle-o'}}"></i>
+              </span>
+              {{group.name}} <span *ngIf="group.source"> ({{group.source}})</span>
               L
             </button>
 
-           <button
-             type="button"
-             class="btn btn-default"
-             (click)="toggleRight(group.id, group.name)">
+
+          </span>
+        </span>
+        </div>
+
+
+        <div *ngIf="observationGroups && observationGroups.length!==1"
+             class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+
+          <button *ngIf="observationGroups && observationGroups.length!==1"
+                  type="button"
+                  class="btn btn-default"
+                  (click)="showAllRight()"><i class="fa fa-circle"></i> Show all on right axis
+          </button>
+          <span *ngFor="let group of observationGroups">
+
+          <span style="white-space: nowrap">
+
+
+
+            <button
+              type="button"
+              class="btn btn-default"
+              (click)="toggleRight(group.id, group.name)">
               <span [style.color]="group.color">
                                 <i class="fa {{group.showRight?'fa-circle':'fa-circle-o'}}"></i>
                             </span>
+             {{group.name}} <span *ngIf="group.source"> ({{group.source}})</span>
               R
             </button>
+          </span>
         </span>
-        </span>
+        </div>
 
-        </span>
 
       </div>
     </div>
