--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -19,7 +19,7 @@
     </div>
 
   </div>
-  <div *ngIf="observationGroups" class="card-block" style="overflow-x: auto;">
+  <div *ngIf="observationGroups" class="card-block" style="overflow-x: hidden;">
 
     <div class="row">
       <div class="w3-center">
