--- a/src/app/modules/clinician-manager/cards/patient-range-picker.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-range-picker.component.html
@@ -2,7 +2,7 @@
   <div class="card-header w3-blue w3-center">
     <span i18n="Patient Events"><i class="fa fa-calendar-times-o"></i></span>
 
-    Date Picker
+    Date Range Picker
 
 
     <div class="card-actions">
