--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -63,8 +63,6 @@
   -->
 
 
-
-
   <div *ngIf="cardToShow==='overview' || cardToShow === 'all'" class="row">
     <div class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <patient-overview>
@@ -113,7 +111,9 @@
 
 
   <div
-    *ngIf="cardToShow==='treatments' || cardToShow === 'medications' || cardToShow === 'morisky' || cardToShow==='observations' || cardToShow === 'all'"
+    *ngIf="cardToShow==='treatments' || cardToShow === 'medications' ||
+    cardToShow === 'morisky' || cardToShow==='observations' ||
+    cardToShow === 'observations-single' || cardToShow === 'all'"
     class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <patient-range-picker (dateRangeChanged)="rangeChanged($event)" [range]="range">
@@ -160,20 +160,7 @@
   </div>
 
 
-  <div *ngIf="cardToShow==='observations' || cardToShow === 'all'" class=" w3-center">
-
-    <button class="btn btn-default {{!showSeparate ? 'btn-outline-success' : ''}}"
-            (click)="showSeparate=false;">Combined Graph
-    </button>
-
-    <button class="btn btn-default {{showSeparate  ? 'btn-outline-success' : ''}}"
-            (click)="showSeparate=true;">Separate Graphs
-    </button>
-
-  </div>
-
-
-  <div *ngIf="!showSeparate && (cardToShow==='observations' || cardToShow === 'all')" class="row">
+  <div *ngIf="cardToShow==='observations' || cardToShow === 'all'" class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <patient-daily-average-observations [forMeasurements]="measurementToShow" [singleValued]="false"
                                           [dateRange]="range">
@@ -182,88 +169,106 @@
   </div>
 
 
-  <div *ngIf="showSeparate && (cardToShow==='observations' || cardToShow === 'all')" class="row">
+  <div *ngIf="cardToShow==='observations-single' || cardToShow === 'all' " class="row">
 
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-12
+      col-lg-12 col-xl-12">
+
+      <div class="card">
+        <div class="card-header w3-blue  w3-center">
+
+          <div><i class="fa fa-heartbeat"></i>
+
+            Patient Measurements and Recordings Single Graphs
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+    <div
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]="'heartrate'" [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
     </div>
 
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]="'sys'" [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"dia"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"weight"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"steps"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"distance"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"sleep"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"pain"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"wellbeing"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"radai"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"ffbh"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
     </div>
     <div
-      class="col-xs-12 col-sm-12 col-md-{{showSeparate?'6':'12'}}
-      col-lg-{{showSeparate?'6':'12'}} col-xl-{{showSeparate?'6':'12'}}">
+      class="col-xs-12 col-sm-12 col-md-6
+      col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"haq"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
 
