Medication and Treatment details view fixed.

--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -63,7 +63,8 @@
   </div>
 
   <div class="card-footer">
-    <div class="w3-tiny w3-right">Click chosen medication to view it's detail
+    <div class="w3-tiny w3-right">Click inside the timeline first, to enable interactions. Then use zoom, scroll to
+      navigate the timeline and click chosen medication to view it's detail
     </div>
   </div>
 
