--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -59,7 +59,8 @@
   </div>
 
   <div class="card-footer">
-    <div class="w3-tiny w3-right">Click chosen treatment to view it's details.
+    <div class="w3-tiny w3-right">Click inside the timeline first, to enable interactions. Then use zoom, scroll to
+      navigate the timeline and click chosen treatment to view it's details.
     </div>
 
   </div>
